// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should contain target="_blank" when openNewTab is set true 1`] = `
<scale-link href="http://example.com" open-new-tab="true">
  <mock:shadow-root>
    <style>
      .link-0-0-5 {
  cursor: pointer;
  outline: none;
  text-decoration: none;
  color: #007DB3;
}
.link-0-0-5:hover.link-0-0-5:not(.link--disabled-0-0-8) {
  color: #007DB3;
  border-bottom: 1px solid currentColor;
}
.link-0-0-5:focus:not(.link--disabled-0-0-8) {
  border-bottom: 2px solid currentColor;
}
.link-0-0-5:active.link-0-0-5:not(.link--disabled-0-0-8) {
  color: #0070A0;
}
.link-0-0-5:visited.link-0-0-5:not(.link--disabled-0-0-8) {
  color: #0070A0;
}
.link__wrapper-0-0-6 {
  display: inline-flex;
  align-items: center;
}
.link__wrapper-0-0-6 > *:not(:first-child) {
  margin-inline-start: 0.25rem;
}
.link--block-0-0-7 {
  display: block;
}
.link--disabled-0-0-8 {
  cursor: not-allowed;
  color: #7C7C7C;
}
    </style>
    <a class="link-0-0-5" href="http://example.com" tabindex="0" target="_self">
      <span class="link__wrapper-0-0-6">
        <slot></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should have link href value when href value is set 1`] = `
<scale-link href="http://example.com">
  <mock:shadow-root>
    <style>
      .link-0-0-5 {
  cursor: pointer;
  outline: none;
  text-decoration: none;
  color: #007DB3;
}
.link-0-0-5:hover.link-0-0-5:not(.link--disabled-0-0-8) {
  color: #007DB3;
  border-bottom: 1px solid currentColor;
}
.link-0-0-5:focus:not(.link--disabled-0-0-8) {
  border-bottom: 2px solid currentColor;
}
.link-0-0-5:active.link-0-0-5:not(.link--disabled-0-0-8) {
  color: #0070A0;
}
.link-0-0-5:visited.link-0-0-5:not(.link--disabled-0-0-8) {
  color: #0070A0;
}
.link__wrapper-0-0-6 {
  display: inline-flex;
  align-items: center;
}
.link__wrapper-0-0-6 > *:not(:first-child) {
  margin-inline-start: 0.25rem;
}
.link--block-0-0-7 {
  display: block;
}
.link--disabled-0-0-8 {
  cursor: not-allowed;
  color: #7C7C7C;
}
    </style>
    <a class="link-0-0-5" href="http://example.com" tabindex="0" target="_self">
      <span class="link__wrapper-0-0-6">
        <slot></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should match snapshot 1`] = `
<scale-link>
  <mock:shadow-root>
    <style>
      .link-0-0-5 {
  cursor: pointer;
  outline: none;
  text-decoration: none;
  color: #007DB3;
}
.link-0-0-5:hover.link-0-0-5:not(.link--disabled-0-0-8) {
  color: #007DB3;
  border-bottom: 1px solid currentColor;
}
.link-0-0-5:focus:not(.link--disabled-0-0-8) {
  border-bottom: 2px solid currentColor;
}
.link-0-0-5:active.link-0-0-5:not(.link--disabled-0-0-8) {
  color: #0070A0;
}
.link-0-0-5:visited.link-0-0-5:not(.link--disabled-0-0-8) {
  color: #0070A0;
}
.link__wrapper-0-0-6 {
  display: inline-flex;
  align-items: center;
}
.link__wrapper-0-0-6 > *:not(:first-child) {
  margin-inline-start: 0.25rem;
}
.link--block-0-0-7 {
  display: block;
}
.link--disabled-0-0-8 {
  cursor: not-allowed;
  color: #7C7C7C;
}
    </style>
    <a class="link-0-0-5" tabindex="0" target="_self">
      <span class="link__wrapper-0-0-6">
        <slot></slot>
      </span>
    </a>
  </mock:shadow-root>
  default
</scale-link>
`;
